[package]
name = "dangame"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
# macroquad-platformer = "0.2.0"
macroquad-tiled = "0.2.1"

# macroquad-platformer = { git = "https://github.com/danwritecode/macroquad", branch = "master", package = "macroquad-platformer" }
macroquad-platformer = { path = "../../macroquad/physics-platformer/" }

