[workspace]
resolver = "3"
members = [ 
  "common",
  "game", 
  "server",
]

[workspace.dependencies]
bincode = "2.0.1"
# macroquad = "0.4.14"
# macroquad-tiled = "0.2.1"
# macroquad-platformer = "0.2.0"
macroquad-platformer = { git = "https://github.com/not-fl3/macroquad", branch = "master", package = "macroquad-platformer" }
macroquad = { git = "https://github.com/not-fl3/macroquad", branch = "master" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad", branch = "master", package = "macroquad-tiled" }

renet = "1.0.0"
renet_netcode = "1.0.0"
