[package]
name = "dangame"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
common = { path = "../common" }
macroquad = { workspace = true }
macroquad-tiled = { workspace = true }
macroquad-platformer = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
